# Face-Capture

./: CMakeLists.txt  README.md
F4C3/unused/: CamFlow.cpp  CamFlow.hpp  Makefile
FACE_CAPTURE/: Core.cpp  F4C3  FACE_CAPTURE.files  Frame.cpp  ImageProcessor.cpp  Makefile  StreamManager.cpp  final  main.cpp
FACE_CAPTURE/headers/: Core.hpp  Frame.hpp  ImageProcessor.hpp  StreamManager.hpp
FACE_CAPTURE/sources/: Core.cpp  ImageProcessor.cpp  StreamManager.cpp  main.cpp
NewProject/: NewProject.jucer
NewProject/Builds/VisualStudio2019/: NewProject.sln  NewProject_App.vcxproj  NewProject_App.vcxproj.filters
NewProject/JuceLibraryCode/: JuceHeader.h
NewProject/Source/: MainComponent.h
